# failure-propagation-intelligence

./: .gitignore  Dockerfile  PROJECT_PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: __init__.py  main.py
dashboard/: .dockerignore  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.css  App.tsx  api.ts  format.ts  main.tsx  nav.ts  sampleScenario.ts  types.ts  views.tsx
dashboard/src/components/: DependencyGraph.tsx  Explain.tsx  Panel.tsx  PropagationChain.tsx  Recommendations.tsx  Sidebar.tsx  SignalTrends.tsx  Timeline.tsx  TopBar.tsx  TrustImpact.tsx  VehicleHealth.tsx
data/: .gitignore
docs/: DATASETS.md
fpi/: __init__.py  datasets.py  detection.py  graph.py  impact.py  pipeline.py  propagation.py  recommendation.py  schemas.py  synthetic.py  trust.py
scripts/: evaluate.py  fetch_datasets.py  generate_data.py  run_demo.py  validate_real.py
tests/: test_api.py  test_datasets.py  test_detection.py  test_impact.py  test_pipeline_integration.py  test_propagation.py  test_recommendation.py  test_synthetic.py  test_trust.py
